EA: ConnectionGraph::split_unique_types does incorrect scalar replacement

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 8u40, 9
    • Component/s: hotspot
    • Environment:

      C2, -XX:CompileCommand=compileonly,java/lang/invoke/MethodHandleImpl.varargsArray

    • b06
    • b35

        MH returned for a typed array by compiled MethodHandleImpl::varargsArray throws java.lang.ClassCastException: Cannot cast [Ljava.lang.Object; to [L<your fancy type>.

        Issue could be reproduced by following tests starting from 8u40-b06:
        java/lang/invoke/JavaDocExamplesTest.java
        java/lang/invoke/VarargsArrayTest.java

        With 8u40-b05 JavaDocExamplesTest pass, so it seems to be a regression.
        This test also passes with 8u20-fcs and with 9-b31.

        When MethodHandleImpl::varargsArray compilation disabled via -XX:CompileCommand=exclude,java/lang/invoke/MethodHandleImpl.varargsArray both tests pass.

              Assignee:
              Vladimir Ivanov
              Reporter:
              Filipp Zhinkin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: