8058825: EA: ConnectionGraph::split_unique_types does incorrect scalar replacement

Reviewed-by: kvn